[package]
name = "nt4-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3"
serde = { version="1", features=["derive"] }
serde_json = "1"
rmp-serde = "1"
serde-wasm-bindgen = "0.5"
serde_bytes = "0.11"
paste = "1"
chrono = "0.4"
web-sys = { version="0.3", features = [
    "Performance"
]}